--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -15,3 +15,63 @@
 .userinfo-nickname {
   color: #aaa;
 }
+
+.date-row {
+  display: flex;
+}
+.date-item {
+  flex: 1;
+  margin-bottom: 10rpx;
+}
+.date-circle {
+  width: 80rpx;
+  height: 80rpx;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 80rpx;
+  position: relative;
+}
+.date-circle.today {
+  border: 1rpx solid #ccc;
+}
+
+.hasCalendar {
+  position: absolute;
+  width: 8rpx;
+  height: 8rpx;
+  background-color: #1e88e5;
+  border-radius: 50%;
+  top: 6rpx;
+  left: 36rpx;
+}
+
+.choosed {
+  background-color: #ccc;
+}
+
+.calendar-box {
+  border-top: 1px solid #ccc;
+}
+
+.calendar-item {
+  display: flex;
+  border-bottom: 1px solid #ccc;
+  padding: 10rpx 0;
+}
+
+.calendar-box-l {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+.calendar-title {
+  width: 300px;
+}
+
+.calendar-box-r {
+  width: 100rpx;
+}
+.createUser {
+  width: 80rpx;
+  height: 80rpx;
+}
