--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -1,6 +1,6 @@
-<!--index.wxml-->
+<!--detail.wxml-->
 <view class="container">
-  <view class="calendar-title">{{calendar.title}}</view>
+  <view class="calendar-title overflow_ellipsis" style="width: 100%; box-sizing: border-box;">{{calendar.title}}</view>
   <view class="detail-box">
     <view class="calendar-time calendar-item">
         <text class="detail-l">时间：</text>
@@ -20,12 +20,12 @@
         <text class="detail-l">发起人：</text>
         <text class="detail-r">{{calendar.createUserName}}</text>
       </view>
-      <view class="calendar-createUser calendar-item">
+      <view class="calendar-createUser calendar-item" bindtap="toMembers">
         <text class="detail-l">参与人员：</text>
         <text class="detail-r">{{calendar.members.length + '人'}}</text>
         <text class="more">{{">"}}</text>
       </view>
-      <view class="calendar-remind calendar-item">
+      <view class="calendar-remind calendar-item" bindtap="toRemind">
         <text class="detail-l">提前：</text>
         <text class="detail-r">{{calendar.remind}}</text>
         <text class="more">{{">"}}</text>
