--- a/pages/detail/detail.wxss
+++ b/pages/detail/detail.wxss
@@ -5,13 +5,6 @@
     padding-top: 20rpx;
     padding-bottom: 20rpx;
 }
-.detail-box {
-  margin: 20rpx 20rpx;
-  background-color: #fff;
-  border-radius: 10rpx;
-  box-sizing: border-box;
-   box-shadow: 0 4rpx 6rpx 0 #999;
-}
 .calendar-item {
   display: flex;
   padding: 20rpx 5rpx;
@@ -30,4 +23,7 @@
 }
 .more {
   padding-right: 30rpx;
+}
+.calendar-time  {
+  padding-right: 100rpx;
 }
