--- a/app.wxss
+++ b/app.wxss
@@ -2,6 +2,7 @@
 
 page {
     height: 100%;
+        font-family: Helvetica Neue,Helvetica,Nimbus Sans L,Arial,Liberation Sans,Hiragino Sans GB,Source Han Sans CN Normal,Microsoft YaHei,Wenquanyi Micro Hei,WenQuanYi Zen Hei,ST Heiti,SimHei,WenQuanYi Zen Hei Sharp,sans-serif;
 }
 .container {
     height: 100%;
