--- a/pages/members/members.wxml
+++ b/pages/members/members.wxml
@@ -18,4 +18,7 @@
       </view>
     </view>
   </view>
+  <view class="detail-box">
+    <button class="addMember" bindtap="addMember">添加成员</button>
+  </view>
 </view>
