--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -1,10 +1,16 @@
 <!--detail.wxml-->
 <view class="container">
-  <view class="calendar-title overflow_ellipsis" style="width: 100%; box-sizing: border-box;">{{calendar.title}}</view>
+  <view class="calendar-title" style="width: 100%; box-sizing: border-box;">
+    <text class="title overflow_ellipsis">{{calendar.title}}</text>
+    <text class="edit" bindtap="toEdit">编辑</text>
+  </view>
   <view class="detail-box">
     <view class="calendar-time box-item">
-        <text class="detail-l">时间：</text>
-        <text class="detail-r">{{calendar.time}}</text>
+        <view class="detail-l">时间：</view>
+        <view class="detail-r">
+          <view>{{calendar.startTime}}</view>  
+          <view>{{calendar.endTime}}</view>  
+        </view>
       </view>
       <view wx:if="{{calendar.description}}" class="calendar-description box-item">
         <text class="detail-l">描述：</text>
