--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -5,7 +5,7 @@
     <text class="prevMonth" bindtap="toPrevMonth">{{'<'}}</text>
     <text class="activeDate">{{date}}</text>
     <text class="nextMonth" bindtap="toNextMonth">{{'>'}}</text>
-    <text class="more-handle" bindtap="toList">...</text>
+    <text class="more-handle" bindtap="toList" style="display:{{unconfirm>0?'inline-block':'none'}}"></text>
   </view>
   <view class="BGColor1 colorWhite flexRow textCenter weeks">
     <text class="flex">一</text>
@@ -16,7 +16,7 @@
     <text class="flex">六</text>
     <text class="flex">七</text>
   </view>
-  <view class="date-box textCenter" bindtouchstart="touchstart" bindtouchend="touchend" bindtouchmove="touchmove">
+  <view animation="{{animation}}" class="date-box textCenter" bindtouchstart="touchstart" bindtouchend="touchend" bindtouchmove="touchmove">
     <view wx:for="{{dateArr}}" wx:for-index="row" class="date-row">
       <view wx:for="{{dateArr[row]}}" wx:for-item="item" class="date-item">
         <view class="date-circle {{item.isToday ? 'today' : ''}} {{item.choosed ? 'choosed' : ''}} {{item.prevMonth || item.nextMonth ? 'colorGray' : ''}}" bindtap="dateClick" data-date="{{item.date}}" >
