--- a/app.wxss
+++ b/app.wxss
@@ -3,12 +3,14 @@
 page {
     height: 100%;
         font-family: Helvetica Neue,Helvetica,Nimbus Sans L,Arial,Liberation Sans,Hiragino Sans GB,Source Han Sans CN Normal,Microsoft YaHei,Wenquanyi Micro Hei,WenQuanYi Zen Hei,ST Heiti,SimHei,WenQuanYi Zen Hei Sharp,sans-serif;
+    
 }
 .container {
     height: 100%;
     align-items: center;
     justify-content: space-between;
     box-sizing: border-box;
+    color: rgba(0,0,0,0.78);
     background-color: #eee;
 }
 .container:before {
@@ -56,12 +58,17 @@ input.active {
 }
 
 .detail-box {
-  margin: 20rpx 20rpx;
+  margin: 20rpx 0rpx;
   background-color: #fff;
-  border-radius: 10rpx;
   box-sizing: border-box;
-  box-shadow: 0 4rpx 6rpx 0 #999;
   overflow: hidden;
+  border-top: 1px solid #ccc;
+}
+
+.button-box {
+    margin: 20rpx 20rpx;
+    border-radius: 5px;
+    overflow: hidden;
 }
 
 .flexRow {
@@ -75,9 +82,18 @@ input.active {
 }
 .box-item {
   display: flex;
-  padding: 20rpx 5rpx;
+  padding: 20rpx 0rpx;
   border-bottom: 1px solid #ccc;
 }
 .more {
   padding-right: 30rpx;
+  color: #999
+}
+
+.icon {
+    width:40rpx;
+    height:40rpx;
+    margin-top: 6rpx;
+    display: inline-block;
+    margin-left: 12rpx;
 }
