--- a/pages/createCalendar/createCalendar.wxml
+++ b/pages/createCalendar/createCalendar.wxml
@@ -1,36 +1,47 @@
 <view class="container">
   <view class="detail-box">
     <view class="box-item">
-      <view class="item-l">名称</view>
+      <image src="/image/title.png" mode="aspectFill" class="icon" style="width: 35rpx;height: 35rpx; margin-top: 10rpx"></image>
+      <view class="item-l">标题</view>
       <view class="item-r"><input data-name="name" bindinput="handleInput" value="{{show.name}}" type="text" placeholder="输入日程名称"></input></view>
     </view>
     <view class="box-item">
+      <image src="/image/desc.png" mode="aspectFill" class="icon"></image>
       <view class="item-l">描述</view>
-      <view class="item-r"><input data-name="desc" bindinput="handleInput" value="{{show.desc}}" type="text" placeholder="输入日程描述"></input></view>
+      <view class="item-r"><textarea data-name="desc" bindinput="handleInput" value="{{show.desc}}" type="text" placeholder="输入日程描述" style="height: 130rpx;width: auto;"></textarea></view>
     </view>
     <view class="box-item">
+      <image src="/image/address.png" mode="aspectFill" class="icon" style="width: 37rpx;height: 37rpx; margin-top: 6rpx"></image>
       <view class="item-l">地点</view>
-      <view class="item-r"><input data-name="address" bindinput="handleInput" value="{{show.address}}" type="text" placeholder="输入日程地点"></input></view>
+      <view class="item-r" style="position:relative">
+        <input data-name="address" bindinput="handleInput" value="{{show.address}}" type="text" placeholder="输入日程地点" style="padding-right: 80rpx;box-sizing: border-box;"></input>
+        <view  bindtap="openMap"  style="position:absolute; right: 30rpx; top: -2rpx; z-index:10">
+        <image src="/image/position.png" mode="aspectFill" class="icon" style="width: 40rpx;height: 40rpx;" bindtap="openMap"></image>
+        </view>
+        </view>
     </view>
   </view>
   <view class="detail-box">
-    <view class="box-item">
+    <view class="box-item" bindtap="toTime">
+      <image src="/image/clock.png" mode="aspectFill" class="icon" style="width: 38rpx;height: 38rpx; margin-top: 8rpx"></image>
       <view class="item-l">时间</view>
       <view class="item-r"><text>{{show.time}}</text></view>
-      <view class="more" bindtap="toTime">{{'点击修改    >'}}</view>
+      <view class="more">{{'    >'}}</view>
     </view>
-    <view class="box-item">
+    <view class="box-item" bindtap="toRemind">
+      <image src="/image/ring.png" mode="aspectFill" class="icon"></image>
       <view class="item-l">提醒</view>
       <view class="item-r"><text>{{show.remind}}</text></view>
-      <view class="more" bindtap="toRemind">{{'点击修改    >'}}</view>
+      <view class="more">{{'    >'}}</view>
     </view>
-    <view class="box-item">
+    <view class="box-item" bindtap="toMember">
+      <image src="/image/peoples.png" mode="aspectFill" class="icon"></image>
       <view class="item-l">成员</view>
       <view class="item-r"><text>{{show.members}}</text></view>
-      <view class="more" bindtap="toMember">{{'点击添加    >'}}</view>
+      <view class="more">{{'    >'}}</view>
     </view>
   </view>
-  <view class="detail-box">
+  <view class="detail-box button-box">
     <button class="createCalendar BGColor1 colorWhite" bindtap="createCalendar">创建</button>
   </view>
 </view>
